[workspace]
resolver = "2"
members = [
    "svgdx",
    "cli",
    "server",
]

[profile.release]
lto = true
opt-level = 's'

[workspace.package]
version = "0.16.0"
description = "create SVG diagrams easily"
authors = ["Ben Bass <benbass@codedstructure.net>"]
repository = "https://github.com/codedstructure/svgdx"
keywords = ["svg", "diagrams"]
license = "MIT"
edition = "2021"
