[package]
name = "svgdx"
version = "0.26.1"
description = "create SVG diagrams easily"
authors = ["Ben Bass <benbass@codedstructure.net>"]
repository = "https://github.com/codedstructure/svgdx"
keywords = ["svg", "diagrams"]
license = "MIT"
edition = "2021"
default-run = "svgdx"
exclude = ["/examples", "/docs"]
rust-version = "1.82"

[features]
default = ["cli", "server"]
cli = ["shlex", "notify", "notify-debouncer-mini", "clap", "tempfile"]
server = ["axum", "clap", "hyper", "serde", "serde_derive", "tokio", "open"]

[dependencies]
quick-xml = "0.38.0"
rand = { version = "0.9", default-features = false }
rand_pcg = "0.9"

tempfile = { version = "3.9.0", optional = true }
shlex = { version = "1.3.0", optional = true }
notify = { version = "8.0.0", optional = true }
notify-debouncer-mini = { version = "0.7.0", optional = true }
clap = { version = "4.5.17", features = ["derive"], optional = true }

axum = { version = "0.8", optional = true }
hyper = { version = "1.3", optional = true }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "fs"], optional = true }
open = { version = "5.3.2", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
assertables = "9.5.0"
itertools = "0.14.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
assert_cmd = "2.0.12"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[[bin]]
name = "svgdx-server"
path = "src/bin/svgdx_server.rs"
required-features = ["server"]

[[bin]]
name = "svgdx"
path = "src/bin/svgdx.rs"
required-features = ["cli"]

[profile.release]
lto = true
opt-level = 's'

# wasm-pack docs imply that `profiling` profile should include debug info,
# but it doesn't seem to. (Useful e.g. for minimizing size with `twiggy`)
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-g', '-O']
