[package]
name = "svgdx-cli"
version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
default-run = "svgdx"

[dependencies]
svgdx = { path = "../svgdx" }
tempfile = "3.9.0"
shlex = "1.3.0"
notify = "7.0.0"
notify-debouncer-mini = "0.5.0"
clap = { version = "4.5.17", features = ["derive"] }

[[bin]]
name = "svgdx"
path = "src/main.rs"
