[package]
name = "svgdx-server"
version.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
svgdx = { path = "../svgdx" }
axum = "0.7"
hyper = "1.3"
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "fs"] }
webbrowser = { version = "1.0.3", features = ["hardened", "disable-wsl"] }
clap = { version = "4.5.17", features = ["derive"] }
